--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mmm-dad-jokes",
   "version": "1.2.1",
   "description": "Random Dad Joke",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/brucetony/MMM-Dad-Jokes"
@@ -19,6 +20,7 @@
     "@eslint/js": "^9.21.0",
     "@eslint/json": "^0.10.0",
     "@eslint/markdown": "^6.2.2",
+    "@stylistic/eslint-plugin-js": "^4.0.1",
     "eslint": "^9.21.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-json": "^4.0.1",
