--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mmm-dad-jokes",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Random Dad Joke",
   "type": "module",
   "repository": {
@@ -8,9 +8,10 @@
     "url": "https://github.com/brucetony/MMM-Dad-Jokes"
   },
   "keywords": [
-    "MagicMirror",
+    "MagicMirror²",
     "jokes",
-    "dad jokes"
+    "dad jokes",
+    "Entertainement"
   ],
   "main": "MMM-Dad-Jokes.js",
   "author": "Bruce Schultz",
